--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 // METHOD 1: LINE NUMBERS
-
+/*
 .container {
     width: 1000px;
     margin: 0 auto;
@@ -34,3 +34,42 @@
         grid-column: 1 / -1;
     }
 } 
+*/
+
+
+// METHOD 2: LINE NAMES
+
+.container {
+    width: 1000px;
+    margin: 30px auto;
+
+    display: grid;
+    grid-template-rows: [header-start] 100px [header-end box-start] 200px [box-end main-start] 400px [main-end footer-start] 100px [footer-end];
+    grid-template-columns: repeat(3, [col-start] 1fr [col-end]) 200px [grid-end];
+    grid-gap: 30px;
+
+    & > * {
+        background-color: orangered;
+        padding: 15px;
+        font-family: sans-serif;
+        font-weight: bold;
+        color: #fff;
+    }   
+
+    & .header {
+        grid-column: col-start 1 / grid-end;
+    }
+
+    & .sidebar {
+        grid-row: box-start / main-end;
+        grid-column: col-end 3 / grid-end;
+    }
+
+    & .main-content {
+        grid-column: col-start 1 / col-end 3;
+    }
+
+    & .footer {
+        grid-column: col-start 1 / grid-end;
+    }
+}
