--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,7 @@
 
 
 // METHOD 2: LINE NAMES
-
+/*
 .container {
     width: 1000px;
     margin: 30px auto;
@@ -71,5 +71,59 @@
 
     & .footer {
         grid-column: col-start 1 / grid-end;
+    }
+}
+*/
+
+
+// METHOD 3: NAME GRID AREAS
+.container {
+    width: 1000px;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-rows: 100px 200px 400px 100px;
+    grid-template-columns: repeat(3, 1fr) 200px;
+    grid-gap: 30px;
+
+    grid-template-areas: "head head head ."
+                         "box-1 box-2 box-3 side"
+                         "main main main side"
+                         "foot foot foot foot";
+
+    & > * {
+        background-color: orangered;
+        padding: 15px;
+        font-family: sans-serif;
+        font-weight: bold;
+        color: #fff;
+    }   
+
+    & .header {
+        grid-area: head;
+    }
+
+    & .sidebar {
+        grid-area: side;
+    }
+
+    & .small-box-1 {
+        grid-area: box-1;
+    }
+
+    & .small-box-2 {
+        grid-area: box-2;
+    }
+
+    & .small-box-3 {
+        grid-area: box-3;
+    }
+
+    & .main-content {
+        grid-area: main;
+    }
+
+    & .footer {
+        grid-area: foot;
     }
 }
